11.k8s-test/04.ingress/cert-manager/02.ingress-certmanager.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-certmanager
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - 2048.ajway.co.kr
    secretName: game-crt-secret
  - hosts:
    - tetris.ajway.co.kr
    secretName: game-crt-secret
  rules:
  - host: 2048.ajway.co.kr
    http:
      paths:
      - backend:
          serviceName: svc-2048
          servicePort: 80
  - host: tetris.ajway.co.kr
    http:
      paths:
      - backend:
          serviceName: svc-tetris
          servicePort: 80
